<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notifikasi_pinjam"
    tools:context=".PeminjamanActivity">

    <LinearLayout
        android:layout_width="162dp"
        android:layout_height="35dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332">

        <TextView
            android:id="@+id/jobsheet_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jobsheet" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="162dp"
        android:layout_height="35dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276">

        <TextView
            android:id="@+id/matkul_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matkul" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="323dp"
        android:layout_height="228dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/toolsList_rc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <TextView
        android:id="@+id/peminjaman_tv"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:text="@string/pinjam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />

    <TextView
        android:id="@+id/pengembalian_tv"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:text="@string/pengembalian"
        app:layout_constraintEnd_toEndOf="@+id/peminjaman_tv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/peminjaman_tv"
        app:layout_constraintTop_toBottomOf="@+id/peminjaman_tv" />

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F7D716"
        android:text="@string/ok"
        android:textColor="#293462"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.810" />


</androidx.constraintlayout.widget.ConstraintLayout>